# metadata-tool

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  METADATA_TOOL_PRINCIPLES.md  README.md  clippy.toml  deny.toml  docker-compose.yml  pgcat.toml  pgcat.toml.example  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/migrations/: 001_extensions.sql  002_identity.sql  003_glossary.sql  004_data_dictionary.sql  005_data_quality.sql  006_lineage.sql  007_applications.sql  008_processes.sql  009_workflow.sql  010_notifications.sql  011_ai_and_audit.sql  012_meta_and_triggers.sql  013_dev_auth_seed.sql  014_workflow_seed.sql  015_glossary_domain_seed.sql  016_app_process_seed.sql  017_glossary_enhancement.sql  018_organisational_units.sql  019_review_frequency_default.sql  020_system_settings.sql  021_simplified_workflow.sql  022_owner_revise_to_steward.sql  023_rename_cde_to_cbt.sql  024_application_enhancement.sql  025_term_code_version_unique.sql  026_app_code_autogen_remove_sla.sql  027_remove_golden_source_text.sql  028_fix_search_vector_trigger.sql  029_superseded_status.sql  030_application_versioning.sql  031_data_dictionary_enhancement.sql  032_ingestion_api.sql  033_element_code_autogen.sql  034_data_type_optional.sql  035_data_element_cleanup.sql  036_element_precision.sql  037_cbt_cde_propagation_trigger.sql  038_quality_rules_enhancement.sql  039_fix_rule_code_trigger.sql  040_simplify_quality_rules.sql  (+14 more)
backend/src/: config.rs  error.rs  lib.rs  main.rs  settings.rs
backend/src/ai/: mod.rs
backend/src/api/: admin.rs  ai.rs  app_bulk_upload.rs  applications.rs  auth.rs  bulk_upload.rs  data_dictionary.rs  data_quality.rs  de_bulk_upload.rs  glossary.rs  health.rs  ingestion.rs  lineage.rs  mod.rs  notifications.rs  processes.rs  users.rs  workflow.rs
backend/src/auth/: middleware.rs  mod.rs
backend/src/db/: mod.rs
backend/src/domain/: ai.rs  applications.rs  data_dictionary.rs  data_quality.rs  glossary.rs  lineage.rs  mod.rs  notifications.rs  processes.rs  users.rs  workflow.rs
backend/src/naming/: mod.rs
backend/src/notifications/: disabled.rs  graph.rs  mod.rs  processor.rs  provider.rs  ses.rs
backend/src/workflow/: mod.rs  service.rs
backend/tests/: test_applications.rs  test_auth.rs  test_data_quality.rs  test_e2e_lifecycle.rs  test_glossary.rs  test_health.rs  test_users.rs  test_workflow.rs
backend/tests/common/: mod.rs
docs/: IMPLEMENTATION_PLAN.md  METADATA_ATTRIBUTE_CHANGE_CHECKLIST.md  NAMING_ALIGNMENT.md  PLAN_BULK_UPLOAD_AND_ADMIN.md  REMEDIATION_PLAN.md  REMEDIATION_PLAN_V2.md  SPRINT_COMPLIANCE.md
docs/architecture/: AWS_DEPLOYMENT_PLAN.md  AWS_MVP_DEPLOYMENT.md
docs/architecture/decisions/: 0001-modular-monolith.md  0002-api-first-openapi.md  0003-workflow-engine.md  0004-ai-integration.md  0005-cde-propagation.md  0006-data-access-patterns.md
docs/examples/: business_glossary_NIM.xlsx
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AiEnrichmentPanel.tsx  AppBulkUploadModal.tsx  BulkUploadModal.tsx  DeBulkUploadModal.tsx
frontend/src/components/lineage/: LineageCustomNode.tsx
frontend/src/constants/: statusConfig.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: AdminPanel.tsx  ApplicationDetail.tsx  ApplicationForm.tsx  ApplicationsPage.tsx  CdePage.tsx  CriticalProcessesPage.tsx  Dashboard.tsx  DataDictionaryPage.tsx  DataElementDetail.tsx  DataElementForm.tsx  DataQualityDashboard.tsx  GlossaryPage.tsx  GlossaryTermDetail.tsx  GlossaryTermForm.tsx  LineageGraphCreate.tsx  LineageGraphList.tsx  LineageGraphView.tsx  LoginPage.tsx  NotificationPreferencesPage.tsx  PlaceholderPage.tsx  ProcessDetail.tsx  ProcessForm.tsx  ProcessesPage.tsx  QualityRuleDetail.tsx  QualityRuleForm.tsx  QualityRulesPage.tsx  SsoCallback.tsx  TechnicalMetadataPage.tsx  UserManagementPage.tsx  WorkflowTasksPage.tsx
frontend/src/pages/__tests__/: LoginPage.test.tsx
frontend/src/pages/admin/: AdminApiKeys.tsx  AdminLookupTables.tsx  AdminSystemConfig.tsx
frontend/src/services/: adminApi.ts  aiApi.ts  api.ts  applicationsApi.ts  dataDictionaryApi.ts  dataQualityApi.ts  glossaryApi.ts  lineageApi.ts  notificationsApi.ts  processesApi.ts  usersApi.ts
frontend/src/services/__tests__/: dataQualityApi.test.ts  glossaryApi.test.ts  usersApi.test.ts
frontend/src/test/: setup.ts
frontend/src/theme/: themeConfig.ts
scripts/: pre-commit.sh
terraform/: .gitignore
terraform/environments/demo/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/cloudflare/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/frontend/: main.tf  outputs.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
