[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hjpdebeer/metadata-tool"

# All external dependencies declared here, referenced with workspace = true
# in individual crate Cargo.toml files. Never add versions directly to crates.
[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "timeout"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
# openidconnect deferred to Sprint 13 (Entra SSO) — pulls in rustls which breaks native-tls for AI calls

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
validator = { version = "0.19", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "charset", "http2", "macos-system-configuration"] }

# Excel processing
calamine = "0.26"
rust_xlsxwriter = "0.79"

# Encryption
aes-gcm = "0.10"

# Multipart file upload
axum_typed_multipart = "0.14"
tempfile = "3"

# Random number generation (API key generation)
rand = "0.9"

# Testing
axum-test = "16"
