[package]
name = "metadata-tool"
description = "Enterprise metadata lifecycle management tool for financial institutions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "metadata-tool"
path = "src/main.rs"

[dependencies]
# Web framework (alphabetical)
axum.workspace = true
axum-extra.workspace = true
hyper.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
jsonwebtoken.workspace = true
openidconnect.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
dotenvy.workspace = true

# Utilities (alphabetical)
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
axum-test.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
